// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio test should render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  color: hsl(0,0%,98%);
}

.c0 > :not([hidden]) ~ :not([hidden]) {
  margin-left: 0.5rem;
}

.c0:hover div {
  background: hsl(240,10%,3.9%);
}

.c0:hover div > svg {
  color: hsl(0,0%,98%);
}

.c1 {
  position: relative;
  width: 1rem;
  height: 1rem;
  border: 1px solid hsl(240,10%,3.9%);
  background: hsl(240,10%,3.9%);
  overflow: hidden;
  border: 1px solid hsl(0,0%,98%);
  box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1),0 1px 2px -1px rgb(0 0 0 / 0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 0.5rem;
  border-radius: 9999px;
  opacity: 1;
}

.c3 {
  background: hsl(240,10%,3.9%);
  width: 100%;
  height: 100%;
  position: absolute;
}

.c4 svg {
  color: transparent;
  z-index: 10;
  position: relative;
}

.c2 {
  display: none;
}

<div>
  <label
    class="c0"
  >
    <div
      class="c1"
    >
      <input
        class="c2"
        type="radio"
        value=""
      />
      <div
        class="c3"
        type="radio"
      />
      <div
        class="c4"
        type="radio"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="8"
            cy="8"
            r="3"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Radio test should render with disabled classes 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  color: hsl(240,5%,64.9%);
}

.c0 > :not([hidden]) ~ :not([hidden]) {
  margin-left: 0.5rem;
}

.c0:hover div {
  background: hsl(240,10%,3.9%);
}

.c0:hover div > svg {
  color: hsl(0,0%,98%);
}

.c1 {
  position: relative;
  width: 1rem;
  height: 1rem;
  border: 1px solid hsl(240,10%,3.9%);
  background: hsl(240,10%,3.9%);
  overflow: hidden;
  border: 1px solid hsl(0,0%,98%);
  box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1),0 1px 2px -1px rgb(0 0 0 / 0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 0.5rem;
  border-radius: 9999px;
  opacity: 0.5;
}

.c3 {
  background: hsl(240,10%,3.9%);
  width: 100%;
  height: 100%;
  position: absolute;
}

.c4 svg {
  color: transparent;
  z-index: 10;
  position: relative;
}

.c2 {
  display: none;
}

<div>
  <label
    class="c0"
    disabled=""
  >
    <div
      class="c1"
      disabled=""
    >
      <input
        class="c2"
        disabled=""
        type="radio"
        value=""
      />
      <div
        class="c3"
        type="radio"
      />
      <div
        class="c4"
        disabled=""
        type="radio"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="8"
            cy="8"
            r="3"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;
